Add sidebar item component

--- a/ProjectRedhead.Client.Application/ClientApp/src/components/sidebar/sidebar.scss
+++ b/ProjectRedhead.Client.Application/ClientApp/src/components/sidebar/sidebar.scss
@@ -10,6 +10,8 @@
 	justify-content: center;
 	align-items: center;
 
+	box-shadow: 10px 0px 15px -3px #0000001a, 4px 0px 6px -2px #0000000d;
+
 	a.item {
 		text-decoration: none;
 		color: $light;
