--- a/ProjectRedhead.Client.Application/ClientApp/src/styles/_variables.scss
+++ b/ProjectRedhead.Client.Application/ClientApp/src/styles/_variables.scss
@@ -13,3 +13,8 @@ $primary-color-light: lighten($primary-color, 10%);
 
 // Easings
 $ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
+
+// Shadows
+$shadow: 0 1px 3px 0 rgba(0,0,0,.1),0 1px 2px 0 rgba(0,0,0,.06)!important;
+$shadow-md: 0 4px 6px -1px rgba(0,0,0,.1),0 2px 4px -1px rgba(0,0,0,.06)!important;
+$shadow-lg: 0 10px 15px -3px rgba(0,0,0,.1),0 4px 6px -2px rgba(0,0,0,.05)!important;
