--- a/ProjectRedhead.Client.Application/ClientApp/src/app.scss
+++ b/ProjectRedhead.Client.Application/ClientApp/src/app.scss
@@ -1,7 +1,27 @@
+@import './styles/variables';
+
 #shell {
 	#sidebar {
 		position: absolute;
 		left: 0;
-		top: 0;
+
+		// Mobile
+		@media screen and (max-width: $break-sm) {
+			bottom: 0;
+			width: 100%;
+
+			.sidebar-container {
+				height: 80px;
+				width: 100%;
+
+				flex-direction: row;
+				justify-content: space-evenly;
+			}
+		}
+
+		// Desktop
+		@media screen and (min-width: $break-sm) {
+			top: 0;
+		}
 	}
 }
