--- a/ProjectRedhead.Client.Application/ClientApp/src/index.scss
+++ b/ProjectRedhead.Client.Application/ClientApp/src/index.scss
@@ -6,7 +6,10 @@
 
 body {
   margin: 0;
-  font-family: $body-font, Arial, Helvetica, sans-serif
+  font-family: $body-font, Arial, Helvetica, sans-serif;
+
+  color: $dark;
+  background-color: $light-01;
 }
 
 h1, h2, h3 {
