Add minor stuff to client (#17)
* Upgrade packages

* Clean up

* Add sidebar design

* Add sidebar item component

* Add mobile breakpoint to sidebar

* Add fonts

* Adjust breakpoints for content

* Add card component

* Add interactivity to sidebar

* Add basic grid system

* Secondary class flag

--- a/ProjectRedhead.Client.Application/ClientApp/src/components/sidebar/sidebar.scss
+++ b/ProjectRedhead.Client.Application/ClientApp/src/components/sidebar/sidebar.scss
@@ -21,7 +21,7 @@
 
 		display: flex;
 
-		transition: background-color 0.4s $ease-out-expo;
+		transition: all 0.4s $ease-out-expo;
 
 		cursor: pointer;
 
@@ -33,6 +33,19 @@
 
 		&:hover {
 			background-color: $primary-color-dark;
+		}
+
+		&:active {
+			transition-duration: 0.07s;
+
+			border-radius: 50%;
+			opacity: 0.9;
+
+			transform: scale(0.9);
+		}
+
+		&.secondary {
+			opacity: 1;
 		}
 	}
 }
