--- a/ProjectRedhead.Client.Application/ClientApp/src/styles/_variables.scss
+++ b/ProjectRedhead.Client.Application/ClientApp/src/styles/_variables.scss
@@ -33,8 +33,8 @@ $break-lg: 1024px;
 $break-xl: 1280px;
 
 // Fonts
-$title-font: 'Zona Pro Extra Bold';
-$body-font: 'Roboto';
+$title-font: 'Inter';
+$body-font: 'Inter';
 
 // Borders
 $border-radius-sm: 3px;
