--- a/ProjectRedhead.Client.Application/ClientApp/src/index.scss
+++ b/ProjectRedhead.Client.Application/ClientApp/src/index.scss
@@ -1,9 +1,17 @@
+@import '~normalize.css';
+
 @import './styles/fonts';
 @import './styles/variables';
 
 @import './styles/grid.scss';
 
+.enable-font-features {
+  font-feature-settings: 'calt' 1, 'liga' 1;
+}
+
 body {
+  @apply .enable-font-features;
+
   margin: 0;
   font-family: $body-font, Arial, Helvetica, sans-serif;
 
@@ -13,5 +21,10 @@ body {
 
 h1, h2, h3 {
   font-family: $title-font, Arial, Helvetica, sans-serif;
-  font-weight: 800;
+  letter-spacing: -0.06em;
+}
+
+h1 {
+  font-weight: 600;
+  font-size: 44px;
 }
