Add user feature and AutoMapper

--- a/ProjectRedhead.Client.Application/ClientApp/src/index.scss
+++ b/ProjectRedhead.Client.Application/ClientApp/src/index.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-  @apply .enable-font-features;
+  @extend .enable-font-features;
 
   margin: 0;
   font-family: $body-font, Arial, Helvetica, sans-serif;
