--- a/ProjectRedhead.Client.Application/ClientApp/src/styles/_fonts.scss
+++ b/ProjectRedhead.Client.Application/ClientApp/src/styles/_fonts.scss
@@ -11,4 +11,4 @@
   src: url('/assets/fonts/ZonaPro-ExtraBoldDemo.otf');
 }
 
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
