--- a/ProjectRedhead.Client.Application/ClientApp/src/styles/_variables.scss
+++ b/ProjectRedhead.Client.Application/ClientApp/src/styles/_variables.scss
@@ -35,6 +35,7 @@ $break-xl: 1280px;
 // Fonts
 $title-font: 'Inter';
 $body-font: 'Inter';
+$serif-font: 'Roboto Slab';
 
 // Borders
 $border-radius-sm: 3px;
